5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1577_1332.log
== SUBMITION (2019-03-14 19:31:52) 
-- CODE:
aresta = 5
area = 3/2*15
 
print(round(area, 4))
-- EXECUTION TIME:
0.162413
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:34:33) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(3*5)**0.5, 4))
-- EXECUTION TIME:
0.116017
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:34:34) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(3*5)**0.5, 4))
-- EXECUTION TIME:
0.141792
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:34:35) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(3*5)**0.5, 4))
-- EXECUTION TIME:
0.188031
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:34:35) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(3*5)**0.5, 4))
-- EXECUTION TIME:
0.11418
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:35:17) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(15)**0.5, 4))
-- EXECUTION TIME:
0.141741
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:35:18) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(15)**0.5, 4))
-- EXECUTION TIME:
0.111593
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:35:47) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(15)**0.5, 4))
-- EXECUTION TIME:
0.205954
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:35:56) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(15)**0.5, 4))
-- EXECUTION TIME:
0.150803
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:35:57) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(15)**0.5, 4))
-- EXECUTION TIME:
0.154589
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:36:00) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2* (15)**0.5, 4))
-- EXECUTION TIME:
0.170104
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:36:00) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2* (15)**0.5, 4))
-- EXECUTION TIME:
0.136739
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:36:01) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2* (15)**0.5, 4))
-- EXECUTION TIME:
0.175242
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:08) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.168208
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:09) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.156535
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:09) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.156043
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:09) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.111615
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:10) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.11721
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:18) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.178588
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:19) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.198079
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:21) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.166154
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:22) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.144827
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:22) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.107271
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:22) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.128986
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:23) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.211472
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:23) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.155261
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:24) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.200811
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:24) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.127711
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:24) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.121622
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:25) 
-- CODE:
aresta = 6
area = 
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.142648
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:32) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.158137
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:33) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.176319
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:33) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.114889
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:34) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.118764
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:34) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.131673
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:34) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.115568
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:34) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.192518
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:34) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.145155
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:35) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.111556
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:35) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.16724
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:35) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.185804
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:36) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.170113
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:47) 
-- CODE:
aresta = 6
area = 22,5
 
print(round(3/2*(225)**0.5, 4))
-- EXECUTION TIME:
0.148129
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:19) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.153289
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:19) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.185691
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:19) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.119595
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1332/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:20) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.1219
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:20) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.109762
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:20) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.112822
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:20) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.093524
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:20) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.129869
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:20) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.096566
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:21) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.153681
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:21) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18)**0.5, 4))
-- EXECUTION TIME:
0.108168
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:30) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18), 4))
-- EXECUTION TIME:
0.11668
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
27.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:40:31) 
-- CODE:
aresta = 6
area = 27
 
print(round(3/2*(18), 4))
-- EXECUTION TIME:
0.189343
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
27.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:29:09) 
-- CODE:
aresta = 
area = 
 
print(round(3/2 * (3)**5 * 5 ** 2 , 4))
-- ERROR:
File "XXXX", line 1
    aresta = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:29:52) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2 * ((3)**5 * 5 ** 2) , 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:31:00) 
-- CODE:
aresta = 5
area = 64.9519
 
print(round(3/2 * ((3)**5 * 5 ** 2) , 4))
-- OUTPUT:
9112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 18:31:08) 
-- CODE:
aresta = 5
area = 64.9519
 
print(round(3/2 * ((3)**5 * 5 ** 2) , 4))
-- EXECUTION TIME:
0.138328
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
9112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:31:17) 
-- CODE:
aresta = 5
area = 64.9519
 
print(round(3/2 * ((3)**5 * 5 ** 2) , 4))
-- OUTPUT:
9112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:32:06) 
-- CODE:
aresta = 6
area = 64.9519
 
print(round(3/2 * ((3)**5 * 6 ** 2) , 4))
-- OUTPUT:
13122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:32:44) 
-- CODE:
aresta = 5
area = 64.95190528
 
print(round(3/2 * ((3)**5 * 5 ** 2) , 4))
-- OUTPUT:
9112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 18:32:52) 
-- CODE:
aresta = 5
area = 64.95190528
 
print(round(3/2 * ((3)**5 * 5 ** 2) , 4))
-- EXECUTION TIME:
0.239813
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
9112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:32:56) 
-- CODE:
aresta = 5
area = 64.95190528
 
print(round(3/2 * ((3)**5 * 5 ** 2) , 4))
-- OUTPUT:
9112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:35:41) 
-- CODE:
aresta = 5
area = 64.95190528
 
print(round(3/2*(3)**0.5 * 5 ** 2 , 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 18:35:45) 
-- CODE:
aresta = 5
area = 64.95190528
 
print(round(3/2*(3)**0.5 * 5 ** 2 , 4))
-- EXECUTION TIME:
0.20725
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
